     is automatically stored in the 'weapon' and 'second_weapon' WML
     variables; this works just like 'unit' and 'second_unit'.
   * fix various minor bugs with attack filtering
   * Fixed linewrapping with not to wrap markups (bug #11946 and bug #11945)
   * fix bug where max_experience of stored units was not the true max when
     playing with under 100% exp. settings
   * Made it possible to use another color palette as second parameter in
     RC(A=B) image path function by using '=' instead of '>' as parameter
     separator; this allows simple color replacement that RC(A>B) did not
     allow.
   * prevent some negative/nonsense values in direct WML unit modifications
   * Renamed the advanceto key in [unit_type] to advances_to in order to be
     consistent with its own and [unit]'s internals.
   * implemented FR #11817: Allow [item]s to be visible only to specified teams
     (patch #1100 by Broodkiller)
 * Networking
   * removed null termination character from end of packet send by wesnoth
 * Miscellaneous and bug fixes:
   * Applied changes suggested by bug #11676 to wesnoth-optipng.
   * Changed side_drop handling not to automaticaly assign AI for side if
     leader is dead (bug #12186)
   * Changed the behavior of [modify_turns] value= to default to -1
     (no turn limit) instead of 50 if an invalid string is passed instead
     of a number.
   * Fixed [modify_turns] causing weird behavior when used in prestart
     or start events to change current turn.
   * Made config cache code available to eveverywhere in wesnoth
   * Fixed [modify_turns] giving the unwanted side-effect of changing
     turn limit when only current= modifier was used.
   * Fixed OOS bug when giving control and having move in undo stack.
   * Fixed [modify_turns] not updating $turn_number when current= was
     used.
   * Fixed crash when ai moves units next to level 0 hiden unit (bug #12252)
   * Fixed loading ai parameters. MP side defination now overwrites 