@@ -723,6 +723,9 @@
     [entry]
         name = "Jan Zvánovec (jaz)"
     [/entry]
+	[entry]
+        name = "Jacek Kominek (BroodKiller)"
+    [/entry]
     [entry]
         name = "Jeff Breidenbach (jab)"
         comment = "Bilinear interpolation"
